+ set clean command-line options to all operations + cleaned the connection tools to correctly use database.properties, either in local dir or via option -d + extended the connection test